--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "file-loader": "^0.11.1",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
-    "webpack-dev-server": "^2.7.1",
-    "webpack": "^2.3.3"
+    "webpack": "^2.3.3",
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
     "react": "^15.5.3",
     "react-bootstrap": "^0.30.8",
-    "react-dom": "^15.5.3"
+    "react-dom": "^15.5.3",
+    "superagent": "^3.6.0"
   }
 }
