--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^15.5.3",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.5.3",
+    "react-router-dom": "^4.2.2",
     "superagent": "^3.6.0"
   }
 }
