--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "axios": "^0.16.2",
     "bootstrap": "^3.3.7",
     "highcharts": "^5.0.14",
+    "momentjs": "^2.0.0",
     "react": "^15.5.3",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.5.3",
+    "react-moment": "^0.6.5",
     "react-router-dom": "^4.2.2",
     "superagent": "^3.6.0"
   }
