--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "axios": "^0.16.2",
     "bootstrap": "^3.3.7",
     "highcharts": "^5.0.14",
+    "material-ui": "^0.19.2",
     "momentjs": "^2.0.0",
     "react": "^15.5.3",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.5.3",
     "react-moment": "^0.6.5",
     "react-router-dom": "^4.2.2",
+    "react-tap-event-plugin": "^2.0.1",
     "superagent": "^3.6.0"
   }
 }
