--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "author": "Imre Nagi <imre.nagi2812@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack -p --display-error-details --color",
-    "start": "webpack-dev-server --history-api-fallback --output-public-path=/dist/ --host 0.0.0.0 --port 8080"
+    "dev": "webpack -d --watch",
+    "build": "webpack -p",
+    "start": "webpack-dev-server"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -21,14 +22,21 @@
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.7.1"
+    "webpack-dev-server": "^2.7.1",
+    "d3-geo": "1.6.4",
+    "path": "0.12.7",
+    "serve-favicon": "2.4.2",
+    "topojson-client": "3.0.0"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "bootstrap": "^3.3.7",
+    "fiber-css": "0.5.1",
     "highcharts": "^5.0.14",
+    "html-webpack-plugin": "^2.30.1",
     "material-ui": "^0.19.2",
     "momentjs": "^2.0.0",
+    "normalize.css": "6.0.0",
     "react": "^15.5.3",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.5.3",
