--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "highcharts": "^5.0.14",
         "html-webpack-plugin": "^2.30.1",
         "material-ui": "^0.19.2",
-        "momentjs": "^2.0.0",
+        "moment": "^2.0.0",
         "normalize.css": "6.0.0",
         "react": "^15.5.3",
         "react-bootstrap": "^0.30.8",
