--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "dev": "webpack -d --watch",
         "build": "webpack -p",
-        "start": "webpack-dev-server",
+        "start": "webpack-dev-server --host 0.0.0.0 --port 8080",
         "test": "jest"
     },
     "jest": {
