--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-moment": "^0.6.5",
     "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^2.0.1",
+    "semantic-ui-react": "^0.74.2",
     "superagent": "^3.6.0"
   }
 }
