--- a/package.json
+++ b/package.json
@@ -67,12 +67,15 @@
     "material-ui": "^0.19.2",
     "moment": "^2.0.0",
     "normalize.css": "6.0.0",
+    "prop-types": "^15.6.0",
     "react": "^15.5.3",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.5.3",
     "react-moment": "^0.6.5",
+    "react-redux": "^5.0.5",
     "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.5.2",
     "semantic-ui-react": "^0.74.2",
     "superagent": "^3.6.0"
   }
