--- a/package.json
+++ b/package.json
@@ -71,12 +71,16 @@
     "prop-types": "^15.6.0",
     "react": "^15.5.3",
     "react-bootstrap": "^0.30.8",
+    "react-cookie": "^2.1.1",
     "react-dom": "^15.5.3",
     "react-moment": "^0.6.5",
-    "react-redux": "^5.0.5",
+    "react-redux": "^4.0.8",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "4.0.8",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.5.2",
+    "redux-form": "^7.1.2",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.74.2",
     "superagent": "^3.6.0"
   }
