--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react": "^15.5.3",
     "react-bootstrap": "^0.30.8",
     "react-cookie": "^2.1.1",
+    "react-day-picker": "^7.0.5",
     "react-dom": "^15.5.3",
     "react-moment": "^0.6.5",
     "react-redux": "^4.0.8",
